cabal-version:      2.4
name:               scroll-design
version:            0.1.0.0
author:             Edsko de Vries
maintainer:         edsko@edsko.net
extra-source-files: CHANGELOG.md

common lang
  default-language:
      Haskell2010
  default-extensions:
      ImportQualifiedPost
  ghc-options:
      -Wall
      -Wprepositive-qualified-module

library
  import:
      lang
  exposed-modules:
      ScrollDesign
  build-depends:
      base ^>=4.16.1.0
    , blaze-html
  hs-source-dirs:
      lib

executable scroll-design
  import:
      lang
  main-is:
      Main.hs
  build-depends:
      base ^>=4.16.1.0
    , scroll-design
  hs-source-dirs:
      app

