cabal-version:      2.4
name:               scroll-design
version:            0.1.0.0
author:             Edsko de Vries
maintainer:         edsko@edsko.net
extra-source-files: CHANGELOG.md

common lang
  default-language:
      Haskell2010
  default-extensions:
      ImportQualifiedPost
      LambdaCase
      RecordWildCards
  ghc-options:
      -Wall
      -Wprepositive-qualified-module

library
  import:
      lang
  exposed-modules:
      ScrollDesign
      ScrollDesign.AST
      ScrollDesign.Render.HTML
  build-depends:
      base >= 4.14
    , blaze-html
    , containers
  other-extensions:
      OverloadedStrings
  hs-source-dirs:
      lib

executable scroll-design
  import:
      lang
  main-is:
      Main.hs
  other-modules:
      CmdLine
  build-depends:
      base
    , scroll-design
    , optparse-applicative
  hs-source-dirs:
      app

